src/app/components/cards/SpiritCard.module.css
.container {
  width: 450px;
  height: 150px;
  margin: 25px 0;
  padding: 25px 0;
  display: flex;
  transition: box-shadow 0.3s ease; /* Add transition property */

  font-size: 0.8rem;
  font-family: sans-serif;
  text-align: center;
}

.container:hover {
  box-shadow: 5px 10px 5px 0px rgba(179, 179, 179, 1);
}

.wrapper {
  width: 100%;
  display: flex;
}

.imageContainer {
  width: 40%;
}

.image {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.textContainer {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container:link,
.container:visited {
  color: black;
  text-decoration: none;
}

@media screen and (max-width: 620px) {
  .container {
    margin: 15px;
    padding: 15px;
    height: 100px;

    font-size: 12px;
  }

  .textContainer {
    text-align: center;
  }
}

